--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <title>caseoppgave</title>
+    <title>Caseoppgave</title>
   </head>
   <body>
     <div id="app"></div>
